# scaffoldly-examples

./: .env  .env.main  .gitignore  .gitmodules  CSharpApp.csproj  CSharpApp.http  Cargo.toml  DotNetCSharpApp.csproj  DotNetCSharpApp.http  LICENSE  README.md  TODO.md  app.py  buf.gen.yaml  client.ts  connect.ts  go.mod  go.sum  index.yml  next.config.mjs  package-lock.json  package.json  pyproject.toml  requirements.txt  scaffoldly.json  server.ts  wp-config.php
.github/workflows/: birth-example.yaml  birth.yaml  birth.yml  deploy-all.yml  deploy-branches.yml  scaffoldly.yml  submodules.yml
.templates/: README.md
.templates/csa/: README.md.tpl
Properties/: launchSettings.json
cmd/client/: main.go
cmd/server/: main.go
greet/v1/: greet.proto
src/: main.rs
src/app/: page.tsx
src/components/: socket-client.tsx
src/pages/api/: socket.ts
webapp/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
webapp/src/app/: page.tsx
webapp/src/components/FileUploadComponent/: FileUpload.tsx
webapp/src/db/: base.ts  file-upload.ts
webapp/src/pages/api/: dynamodb.ts  health.ts  s3.ts
webapp/src/pages/api/upload/: index.ts
