[package]
name = "rust-hyper"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }

[package.metadata.scaffoldly]
runtime = "alpine:3.20"
handler = "localhost:3000"

[[package.metadata.scaffoldly.services]]
name = "hyper"
runtime = "rust:1-alpine3.20"
files = ["target"]
packages = ["gcc", "musl-dev"]
scripts = { build = "cargo build --release", start = "target/release/rust-hyper" }
